🔠 Fixed input spacing

--- a/assets/styles/hackathons/searchbar.css
+++ b/assets/styles/hackathons/searchbar.css
@@ -20,8 +20,8 @@
   border-radius: 7px;
   font-size: 20px;
   color: black;
-  position: relative;
-  background: none
+  background: none;
+  min-width: 0;
 }
 
 :root.dark .searchbar > input {
@@ -29,5 +29,5 @@
 }
 
 .searchbar > i {
-    pointer-events: none;
+  pointer-events: none;
 }
